--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -11,25 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np               # Массивы (матрицы, векторы, линейная алгебра)           \n",
     "import matplotlib.pyplot as plt  # Научная графика\n",
     "import pandas as pd              # Таблицы и временные ряды (dataframe, series)\n",
     "import seaborn as sbn            # Еще больше красивой графики для визуализации данных\n",
     "import sklearn                   # Алгоритмы машинного обучения\n",
-    "import os\n"
+    "import os\n",
+    "\n",
+    "import sklearn.model_selection\n",
+    "import sklearn.neighbors\n",
+    "import sklearn.svm\n",
+    "import sklearn.linear_model"
    ]
   },
   {
@@ -44,12 +40,8 @@
     "5. Обработать категориальные признаки\n",
     "6. Провести нормализацию (или объяснить, почему в вашем случае она не нужна)\n",
     "7. Разбить данные на обучающую и тестовую выборки\n",
-    "8. Запустить классификатор ближайших соседей (попробовать разное их количество)\n",
-    "9. Вычислить ошибки на обучающей и тестовой выборках. Сделать выводы\n",
-    "10. По желанию: запустить другие классификаторы. Сравнить результаты\n",
-    "11. По желанию: как-то побороться с несбалансированностью классов (если она есть)\n",
-    "12. По желанию: исключить коррелированные переменные (объяснить зачем)\n",
-    "13. Сделать общие выводы\n",
+    "8. Запустить классификатор ближайших соседей (попробовать разное их количество) и вычислить ошибки на обучающей и тестовой выборках. \n",
+    "9. Сделать общие выводы\n",
     "\n",
     "**1. Описание задачи**\n",
     "\n",
@@ -1450,6 +1442,136 @@
    "source": [
     "data_normalized = (data - data.mean(axis = 0)) / data.std(axis = 0)\n",
     "data_normalized.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**7. Разбить данные на обучающую и тестовую выборки**\n",
+    "\n",
+    "Divide the data into a training and test sample with a ratio of 3:1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = data_normalized.drop(['stroke'], axis=1)\n",
+    "y = data['stroke']\n",
+    "x_train, x_test, y_train, y_test = sklearn.model_selection.train_test_split(x, y, test_size=0.25, random_state=43)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**8. Запустить классификатор ближайших соседей**\n",
+    "\n",
+    "Number of neighbors = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 0.9532881002087683, Test: 0.9546165884194053\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = sklearn.neighbors.KNeighborsClassifier(n_neighbors=2)\n",
+    "model.fit(x_train.values, y_train.values)\n",
+    "y_train_pred = model.predict(x_train.values)\n",
+    "y_test_pred = model.predict(x_test.values)\n",
+    "print(\"Train: {}, Test: {}\".format((y_train == y_train_pred).mean(), (y_test == y_test_pred).mean()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The accuracy for the test and training samples is shown above at the value of the parameter k = 2. So now we will try with 10."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Number of neighbors = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 0.9491127348643006, Test: 0.960093896713615\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = sklearn.neighbors.KNeighborsClassifier(n_neighbors=10)\n",
+    "model.fit(x_train.values, y_train.values)\n",
+    "y_train_pred = model.predict(x_train.values)\n",
+    "y_test_pred = model.predict(x_test.values)\n",
+    "\n",
+    "print(\"Train: {}, Test: {}\".format((y_train == y_train_pred).mean(), (y_test == y_test_pred).mean()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Логистическая регрессия**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 0.9483298538622129, Test: 0.9616588419405321\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = sklearn.linear_model.LogisticRegression()\n",
+    "model.fit(x_train.values, y_train.values)\n",
+    "y_train_pred = model.predict(x_train.values)\n",
+    "y_test_pred = model.predict(x_test.values)\n",
+    "print(\"Train: {}, Test: {}\".format((y_train == y_train_pred).mean(), (y_test == y_test_pred).mean()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**9. Сделать общие выводы**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Видно, что с увеличение числа соседей в метод К ближайших соседей не гарантирует улучшение точности на тестовой выборке.\n",
+    "\n",
+    "Также, алгоритм логистической регрессии незначительно превосходит метод ближайших соседей в точности."
    ]
   }
  ],
